# my-ai-bag

./: .gitignore  AGENTS.md  Cargo.toml  PLANS.md  README.md  agents.toml
docs/: security.md  tool-catalog.md
src/: catalog.rs  inventory.rs  lib.rs  pack.rs  preview.rs  scan.rs  skills.rs  ui.rs
